--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
     "docx": "^5.0.2",
+    "file-saver": "^2.0.2",
     "node": "^14.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
